# OpenSolar

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  setup.py
dataset/radiation_diff_3y/: diff_202001.asc  diff_202002.asc  diff_202003.asc  diff_202004.asc  diff_202005.asc  diff_202006.asc  diff_202007.asc  diff_202008.asc  diff_202009.asc  diff_202010.asc  diff_202011.asc  diff_202012.asc  diff_202101.asc  diff_202102.asc  diff_202103.asc  diff_202104.asc  diff_202105.asc  diff_202106.asc  diff_202107.asc  diff_202108.asc  diff_202109.asc  diff_202110.asc  diff_202111.asc  diff_202112.asc  diff_202201.asc  diff_202202.asc  diff_202203.asc  diff_202204.asc  diff_202205.asc  diff_202206.asc  diff_202207.asc  diff_202208.asc  diff_202209.asc  diff_202210.asc  diff_202211.asc  diff_202212.asc
dataset/radiation_direct_3y/: direct_202001.asc  direct_202002.asc  direct_202003.asc  direct_202004.asc  direct_202005.asc  direct_202006.asc  direct_202007.asc  direct_202008.asc  direct_202009.asc  direct_202010.asc  direct_202011.asc  direct_202012.asc  direct_202101.asc  direct_202102.asc  direct_202103.asc  direct_202104.asc  direct_202105.asc  direct_202106.asc  direct_202107.asc  direct_202108.asc  direct_202109.asc  direct_202110.asc  direct_202111.asc  direct_202112.asc  direct_202201.asc  direct_202202.asc  direct_202203.asc  direct_202204.asc  (+8 more)
notebooks/: google_maps.ipynb  kWh_production.ipynb
opensolar/: algorithms.py  api.py  app.py  chart.py  draw_utils.py  forecast.py  search.py  segmentation.py  utils.py
(+34 files in other folders)
